k8s/prod/zwave-js-ui/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: zwave-js-ui
  labels:
    name: zwave-js-ui
    goldilocks.fairwinds.com/enabled: "true"
